[project]
name = "floorplans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairocffi>=1.7.1",
    "cairosvg>=2.8.2",
    "inference-sdk>=0.9",
    "manifold3d>=3.3.2",
    "mapbox-earcut>=2.0.0",
    "networkx>=3.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.1",
    "scikit-image>=0.19.0",
    "scikit-learn>=1.0.0",
    "shapely>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "trimesh>=3.9.0",
]
